--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
@@ -16,6 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-simple-star-rating": "^5.1.7",
     "sass": "^1.77.5"
   },
   "devDependencies": {
@@ -24,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "prettier": "^3.3.1",
