--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-select": "^5.8.0",
     "react-simple-star-rating": "^5.1.7",
     "sass": "^1.77.5"
   },
