--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "react-simple-star-rating": "^5.1.7",
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
