--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "react-simple-star-rating": "^5.1.7",
@@ -26,6 +31,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.58.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
