--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
+    "jose": "^5.9.3",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.446.0",
     "next": "14.2.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -23,6 +26,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-input-mask": "^2.0.4",
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
