--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SERVER_URL = http://localhost:4200/api
 APP_URL = http://localhost:3000
-RECAPTCHA_KEY = '6LcweV8qAAAAAAWax-4gjHif7XukyzrqxlFtEv93'
+RECAPTCHA_SITE_KEY = '6LcweV8qAAAAAAWax-4gjHif7XukyzrqxlFtEv93'
 JWT_SECRET ="secret"
